<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mBasha</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="su">S</string>
    <string name="mo">M</string>
    <string name="tu">T</string>
    <string name="we">W</string>
    <string name="th">T</string>
    <string name="fr">F</string>
    <string name="sa">S</string>

    <string-array name="planets_array">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
        <item>item5</item>
        <item>item6</item>
        <item>item7</item>
        <item>item8</item>
    </string-array>
    <string-array name="hotcity_arry">
        <item>定位</item>
        <item>北京</item>
        <item>上海</item>
        <item>广州</item>
        <item>深圳</item>
        <item>武汉</item>
        <item>南京</item>
        <item>西安</item>
        <item>成都</item>
        <item>郑州</item>
        <item>杭州</item>
        <item>东莞</item>
        <item>重庆</item>
        <item>长沙</item>
        <item>天津</item>
        <item>苏州</item>
        <item>沈阳</item>
        <item>福州</item>
        <item>无锡</item>
        <item>哈尔滨</item>
        <item>厦门</item>
        <item>石家庄</item>
        <item>合肥</item>
        <item>南昌</item>
        <item>济南</item>
        <item>佛山</item>
        <item>大连</item>
        <item>常州</item>
        <item>太原</item>
        <item>青岛</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="actionbar_name_wx">微行</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>